# TFG_Files

./: README.md
Algorithms/ExhaustiveAlgorithmSolveCpp/: CMakeLists.txt  main.cpp
Algorithms/cppGeneticKanon/: CMakeLists.txt  geneticKAnonimity.cpp
Algorithms/minizincSolveKanon/: kAnonymityFINAL.mzn  kAnonymityWithAppointments.dzn  kAnonymityWithAppointmentsLarge.dzn  kAnonymityWithAppointmentsMedium.dzn
